Fixes quantity button resizing on mobile / tablet devices

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1405,6 +1405,11 @@ div.widget .extendednavigation ul li, div.widget.extendednavigation ul li {
 			float: right;
 		}
 	}
+	.widget.ecomcheckout table tr td .checkout-quantitybtn button {
+		height: 30px;
+		width: 30px;
+		line-height: 10px;
+	}
 }
 
 // Mobile
